2010-10-17 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Changed the way of reading stdin, which is now based on
	blocking reads using a specified thread and thread-safe messaging with
	acknowledgement using a task port (part of trac ticket #56).

2010-10-11 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Worker.py: Add Worker.abort() base method and ensure proper
	implementation in all workers (trac ticket #63).

2010-10-10 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Worker.py: WorkerBadArgumentError exception is now
	deprecated, use ValueError instead. Also added exception message in
	each worker (trac ticket #116).

2010-10-01 A. Degremont <aurelien.degremont@cea.fr>

	* Task.py: Add Task.run() new method (trac ticket #119).

2010-09-28 S. Thiell <stephane.thiell@cea.fr>

	* CLI/OptionParser.py: Do not allow option value starting with '-' in some
	cases.

2010-09-26 S. Thiell <stephane.thiell@cea.fr>

	* CLI: Package created.

2010-09-03 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Ssh.py: Fix issue with clush -l USER by separating underlying ssh
	"-l USER" in two shell arguments (trac ticket #113).

2010-08-31 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Live per-line gathering (-bL mode) improvements.

	* Task.py: Fixed Task.timer() when called from another thread - it used to
	return None (trac ticket #112).

2010-08-29 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: Add docstring for timer's autoclose feature (trac ticket #109).

	* Worker/Worker.py: Attribute 'last_errmsg' not properly initialized (trac
	ticket #107).

	* setup.py: Switch to setuptools.

    * clustershell.spec.in: Fix issue on el5 with if condition when defining
	python_sitelib.

2010-08-26 S. Thiell <stephane.thiell@cea.fr>

	* Packaging automation engineering and improved specfile.

	* License files converted to UTF-8.

2010-07-27 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 released.

2010-07-21 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 RC 2 released.
