@@ -59,9 +59,8 @@ class PreferredEngine(object):
         Create a new preferred Engine.
         """
         if not hint or hint == 'auto':
-            # 2010-02-11: disable automatic EngineEPoll selection as an
-            # epoll issue has been found (trac ticket #56).
-            for engine_class in [ EnginePoll ]:  # in order or preference
+            # in order or preference
+            for engine_class in [ EngineEPoll, EnginePoll ]:
                 try:
                     return engine_class(info)
                 except EngineNotSupportedError:
